Rename oop notebook

--- a/code/python/introduction/oop_modulos_logging.ipynb
+++ b/code/python/introduction/oop_modulos_logging.ipynb
@@ -5,7 +5,7 @@
    "id": "7cc391f3",
    "metadata": {},
    "source": [
-    "# OOP y Modulos en Python"
+    "# OOP, Modulos y Logging en Python"
    ]
   },
   {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "48d884a2",
    "metadata": {},
    "outputs": [],
@@ -92,13 +92,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "0a153e05",
    "metadata": {},
    "outputs": [],
    "source": [
     "d = datetime.date(2020, 10, 1)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d52706bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6aafa11b",
+   "metadata": {},
+   "source": [
+    "## Logging y Debugging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "42a5ad03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add(x, y):\n",
+    "    print(f\"The value of x is {x}\")\n",
+    "    z = x + y\n",
+    "    print(f\"The value of z is {z}\")\n",
+    "    return x + y + z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9bc10cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add(5,9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26b87e40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1fd5517",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
