Limit resources for workshop (#4)
* add an option to start and stop superset container

* add .vscode to gitignore

* limit memory and cores for spark workers

* limit spark application resources for pyspark notebooks

* limit spark application resources for titanic notebooks

--- a/jupyter/notebook/pyspark-apache-arrow.ipynb
+++ b/jupyter/notebook/pyspark-apache-arrow.ipynb
@@ -25,10 +25,16 @@
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
-    "\n",
-    "spark = SparkSession.builder. \\\n",
-    "    appName(\"pyspark-arrow\"). \\\n",
-    "    getOrCreate()"
+    "spark = (\n",
+    "    SparkSession.builder\n",
+    "    .appName(\"pyspark-arrow\")\n",
+    "    .config(\"spark.driver.memory\", \"512m\")\n",
+    "    .config(\"spark.driver.cores\", \"1\")\n",
+    "    .config(\"spark.executor.memory\", \"512m\")\n",
+    "    .config(\"spark.executor.cores\", \"1\")\n",
+    "    .config(\"spark.sql.shuffle.partitions\", \"2\")\n",
+    "    .getOrCreate()\n",
+    ")"
    ]
   },
   {
@@ -205,13 +211,6 @@
    "source": [
     "spark.stop()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
