--- a/jupyter/notebook/batch_etl_steps.ipynb
+++ b/jupyter/notebook/batch_etl_steps.ipynb
@@ -19,8 +19,16 @@
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
-    "\n",
-    "spark = SparkSession.builder.appName(\"Stocks:ETL\").getOrCreate()"
+    "spark = (\n",
+    "    SparkSession.builder\n",
+    "    .appName(\"Stocks:ETL\")\n",
+    "    .config(\"spark.driver.memory\", \"512m\")\n",
+    "    .config(\"spark.driver.cores\", \"1\")\n",
+    "    .config(\"spark.executor.memory\", \"512m\")\n",
+    "    .config(\"spark.executor.cores\", \"1\")\n",
+    "    .config(\"spark.sql.shuffle.partitions\", \"2\")\n",
+    "    .getOrCreate()\n",
+    ")"
    ]
   },
   {
@@ -692,7 +700,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "spark.stop()"
+   ]
   }
  ],
  "metadata": {
