--- a/jupyter/notebook/pyspark-check-install.ipynb
+++ b/jupyter/notebook/pyspark-check-install.ipynb
@@ -25,7 +25,16 @@
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
-    "spark = SparkSession.builder.appName(\"OneHotEncoderEstimator\").getOrCreate()"
+    "spark = (\n",
+    "    SparkSession.builder\n",
+    "    .appName(\"OneHotEncoderEstimator\")\n",
+    "    .config(\"spark.driver.memory\", \"512m\")\n",
+    "    .config(\"spark.driver.cores\", \"1\")\n",
+    "    .config(\"spark.executor.memory\", \"512m\")\n",
+    "    .config(\"spark.executor.cores\", \"1\")\n",
+    "    .config(\"spark.sql.shuffle.partitions\", \"2\")\n",
+    "    .getOrCreate()\n",
+    ")"
    ]
   },
   {
@@ -60,13 +69,6 @@
    "source": [
     "spark.stop()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
