--- a/jupyter/notebook/pyspark-dataframe-overview.ipynb
+++ b/jupyter/notebook/pyspark-dataframe-overview.ipynb
@@ -29,7 +29,16 @@
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
-    "spark = SparkSession.builder.appName(\"pyspark-df-overview\").getOrCreate()"
+    "spark = (\n",
+    "    SparkSession.builder\n",
+    "    .appName(\"pyspark-df-overview\")\n",
+    "    .config(\"spark.driver.memory\", \"512m\")\n",
+    "    .config(\"spark.driver.cores\", \"1\")\n",
+    "    .config(\"spark.executor.memory\", \"512m\")\n",
+    "    .config(\"spark.executor.cores\", \"1\")\n",
+    "    .config(\"spark.sql.shuffle.partitions\", \"2\")\n",
+    "    .getOrCreate()\n",
+    ")"
    ]
   },
   {
@@ -449,13 +458,6 @@
     "\n",
     "* [PySpark Tutorial for Beginners: Machine Learning Example](https://www.guru99.com/pyspark-tutorial.html)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
