--- a/jupyter/notebook/pyspark-intro.ipynb
+++ b/jupyter/notebook/pyspark-intro.ipynb
@@ -17,7 +17,16 @@
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
-    "spark = SparkSession.builder.appName(\"pyspark-intro\").getOrCreate()"
+    "spark = (\n",
+    "    SparkSession.builder\n",
+    "    .appName(\"pyspark-intro\")\n",
+    "    .config(\"spark.driver.memory\", \"512m\")\n",
+    "    .config(\"spark.driver.cores\", \"1\")\n",
+    "    .config(\"spark.executor.memory\", \"512m\")\n",
+    "    .config(\"spark.executor.cores\", \"1\")\n",
+    "    .config(\"spark.sql.shuffle.partitions\", \"2\")\n",
+    "    .getOrCreate()\n",
+    ")"
    ]
   },
   {
