--- a/jupyter/notebook/titanic/titanic_spark_solutions.ipynb
+++ b/jupyter/notebook/titanic/titanic_spark_solutions.ipynb
@@ -24,7 +24,16 @@
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
-    "spark = SparkSession.builder.appName('pyspark-titanic-sol').getOrCreate()"
+    "spark = (\n",
+    "    SparkSession.builder\n",
+    "    .appName(\"pyspark-titanic-sol\")\n",
+    "    .config(\"spark.driver.memory\", \"512m\")\n",
+    "    .config(\"spark.driver.cores\", \"1\")\n",
+    "    .config(\"spark.executor.memory\", \"512m\")\n",
+    "    .config(\"spark.executor.cores\", \"1\")\n",
+    "    .config(\"spark.sql.shuffle.partitions\", \"2\")\n",
+    "    .getOrCreate()\n",
+    ")"
    ]
   },
   {
