--- a/jupyter/notebook/titanic/docs/clase_ml.tex
+++ b/jupyter/notebook/titanic/docs/clase_ml.tex
@@ -359,7 +359,7 @@ pdfkeywords={python, machine learning}
 Spark}
 \subtitle{Especialización en Ciencia de Datos - ITBA}
 \author[]{Workshop de Big Data}
-\institute[]{16 de Diciembre de 2020}
+\institute[]{12 de Agosto de 2021}
 \date[]{\includegraphics[scale=0.35]{logo_mutt.png}}
 
 % Add agenda toc frame at the beginning of each section and anchor for proper
