--- a/airflow/docs/clase_airflow.tex
+++ b/airflow/docs/clase_airflow.tex
@@ -358,7 +358,7 @@ pdfkeywords={python, machine learning}
 \title[Intro Airflow]{Armado de Workflows Dinámicos con Apache Airflow}
 \subtitle{Especialización en Ciencia de Datos - ITBA}
 \author[]{Workshop de Big Data}
-\institute[]{13 de Agosto de 2021}
+\institute[]{14 de Octubre de 2021}
 \date[]{\includegraphics[scale=0.35]{logo_mutt.png}}
 
 % Add agenda toc frame at the beginning of each section and anchor for proper
